force-app/main/default/objects/Monthly_Forecast_Commits__c/Monthly_Forecast_Commits__c.object-meta.xml
<CustomObject>
    <label>Monthly Forecast Commit</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Monthly Forecast Commits Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Monthly Forecast Commits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>