force-app/main/default/objects/Monthly_Forecast_Commits__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>