force-app/main/default/objects/Monthly_Forecast_Commits__c/fields/Capital_Amount__c.field-meta.xml
<CustomField>
    <fullName>Capital_Amount__c</fullName>
    <label>Capital Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>