force-app/main/default/objects/Monthly_Forecast_Commits__c/fields/Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Forecast Category</label>
    <length>75</length>
    <type>Text</type>
</CustomField>