force-app/main/default/objects/Monthly_Forecast_Commits__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Opportunity Owner</label>
    <length>75</length>
    <type>Text</type>
</CustomField>