force-app/main/default/objects/Monthly_Forecast_Commits__c/fields/Owner_s_Manager__c.field-meta.xml
<CustomField>
    <fullName>Owner_s_Manager__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Owner&apos;s Manager</label>
    <length>75</length>
    <type>Text</type>
</CustomField>